deploykeycloack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: keycloak.devoteam.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
